--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "./src/(.*)",
-      "dest": "/server/src"
+      "src": "./(.*)",
+      "dest": "/"
     }
   ]
 }
