--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,13 +3,13 @@
   "builds": [
     {
       "src": "./src/index.js",
-      "use": "@now/mode"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "./src/(.*)",
-      "dest": "./src/index.js"
+      "dest": "./src/"
     }
   ]
 }
