--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "./src/(.*)",
-      "dest": "/server/src/index.js"
+      "dest": "./src/index.js"
     }
   ]
 }
